# ara_dialectical_fragments

./: .gitignore  LICENSE  README.md  build_jsonl_data.py  pyproject.toml  rewayat_annotation.py  rewayat_build_hf_dataset.py  rewayat_hf_preprocessing.py  test_punctuation_filter.py  test_punctuation_function.py  test_speaker_extraction.py
