[project]
name = "ara-dialectical-fragments"
version = "0.1.0"
description = ""
authors = [
    {name = "Kirill Chirkunov",email = "kirill.chirkunov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
pandas = ">=2.3.1,<3.0.0"
requests = ">=2.32.4,<3.0.0"
fasttext-langdetect = ">=1.0.5,<2.0.0"
lingua-language-detector = ">=2.1.1,<3.0.0"
datasets = ">=4.0.0,<5.0.0"
scikit-learn = ">=1.7.1,<2.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
langchain-openai = ">=0.3.35,<0.4.0"
shortuuid = "^1.0.13"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
